# parakeet-rs

./: Cargo.toml  README.md
examples/: granite.rs  granite_nar.rs  granite_plus.rs  unified.rs
scripts/: export_parakeet_unified.py
src/: audio.rs  audio_granite.rs  cohere.rs  decode_util.rs  decoder_granite.rs  decoder_nar.rs  execution.rs  granite.rs  granite_common.rs  granite_nar.rs  granite_plus.rs  granite_plus_tags.rs  lib.rs  model_granite.rs  model_granite_nar.rs  model_unified.rs  nemotron.rs  parakeet_eou.rs  parakeet_unified.rs
